# stm32_audio

./: Cargo.toml  memory.x
.cargo/: config.toml
src/: i2s_process.rs  main.rs  timer2.rs  usb_audio_class.rs
src/audio/: common.rs  mod.rs  uac20.rs
