[package]
name = "stm32_audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-stm32 = { version = "0.1.0", path = "../embassy/embassy-stm32", features = ["defmt", "stm32f401cc", "unstable-pac", "memory-x", "time-driver-tim3", "exti", "chrono", "low-power"]  }
embassy-sync = { version = "0.5.0", path = "../embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.5.0", path = "../embassy/embassy-executor", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3", path = "../embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.1.0", path = "../embassy/embassy-usb", features = ["defmt" ] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
embedded-io = { version = "0.6.1" }
embedded-io-async = { version = "0.6.1" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
static_cell = "2.0"

[profile.dev]
incremental = false
codegen-units = 1
debug = 2

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
# NOTE disabled to work around issue rust-lang/rust#90357
# the bug results in log messages not having location information
# (the line printed below the log message that contains the file-line location)
# lto = 'fat'
opt-level = 2
overflow-checks = true
