[package]
name = "stm32_audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# embassy-stm32 = { version = "0.1.0", path = "../embassy/embassy-stm32", features = ["defmt", "stm32f401cc", "unstable-pac", "memory-x", "time-driver-tim3", "exti", "chrono", "low-power"]  }
# embassy-nrf = {version = "0.1.0", path = "../embassy/embassy-nrf", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time"] }
# embassy-rp = { version = "0.1.0", path = "../embassy/embassy-rp", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }

esp-println = { version = "0.9.0", features = ["esp32c6", "defmt-espflash"] }
esp32c6-hal = { package = "esp32c6-hal", version = "0.8.0", features = ["async", "embassy", "embassy-executor-thread", "defmt", "embassy-time-timg0" ]}
#esp-backtrace = { version = "0.10.0", features = ["esp32c6", "panic-handler", "exception-handler"] }
esp-backtrace      = { version = "0.10.0", features = ["esp32c6", "panic-handler", "exception-handler", "print-jtag-serial"] }

embassy-sync = { version = "0.5.0", path = "../embassy/embassy-sync" }
# embassy-executor = { version = "0.5.0", path = "../embassy/embassy-executor", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-executor = { version = "0.5.0", path = "../embassy/embassy-executor", features = ["arch-riscv32", "defmt"] }
#embassy-time = { version = "0.3", path = "../embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime"] }
# embassy-time = { version = "0.3", path = "../embassy/embassy-time" }
# embassy-time = { version = "0.3.0", path = "../embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-usb = { version = "0.1.0", path = "../embassy/embassy-usb" }
embassy-futures = "0.1.1"
# embassy-time-driver = {version = "0.1.0", features = [ "tick-hz-1_000_000" ]}

defmt = { version = "0.3.5" }
defmt-rtt = "0.4"

embedded-hal = "1.0.0"
embedded-io = { version = "0.6.1" }
embedded-io-async = { version = "0.6.1" }
# panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
static_cell = "2.0"
fixed = "1.25"

[profile.dev]
incremental = false
codegen-units = 1
debug = 2

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
# NOTE disabled to work around issue rust-lang/rust#90357
# the bug results in log messages not having location information
# (the line printed below the log message that contains the file-line location)
# lto = 'fat'
opt-level = 2
overflow-checks = true
